@@ -145,6 +145,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4998: The memory saving effect of __slots__ had been lost on Fractions
+  which inherited from numbers.py which did not have __slots__ defined.  The
+  numbers heirarchy now has its own __slots__ declarations.
+
 - Issue #3321: _multiprocessing.Connection() doesn't check handle; added checks
   for *nix machines for negative handles and large int handles. Without this check
   it is possible to segfault the interpreter.
